# nixops-with-plugins

./: default.nix  nixops-pluggable.nix  overrides.nix  pyproject.toml  shell.nix  withplug.nix
