[tool.poetry]
name = "nixops-with-plugins"
version = "0.1.0"
description = ""
authors = ["adisbladis <adisbladis@gmail.com>", "typetetris <ericwolf42@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nixops = {git = "https://github.com/NixOS/nixops.git", rev = "master"}
#nixops = {git = "https://github.com/NixOS/nixops.git", rev = "8de09879d7b1733bc4085257d5bf3cc734f1ed38"}
#nixops-aws = {git = "https://github.com/nixos/nixops-aws.git"}
#nixopsvbox = {git = "https://github.com/nix-community/nixops-vbox.git"}
#nixops-virtd = {git = "https://github.com/typetetris/nixops-libvirtd.git"}
#nixops-digitalocean = {git = "https://github.com/nix-community/nixops-digitalocean.git", rev="master"}
nixops-digitalocean = {path = "../../nix-community/nixops-digitalocean"}

[tool.poetry.dev-dependencies]
#nixops-digitalocean = {git = "https://github.com/nix-community/nixops-digitalocean.git", rev="master"}
mypy = "^0.770"
black = "^19.10b0"
nose = "^1.3.7"
coverage = "^5.2.1"
# For mypy txt report
lxml = "^4.6.1"
flake8 = "^3.8.1"
jsonpickle = "1.4.1"
pluggy = ">=0.13.1,<0.14.0"
PrettyTable = ">=0.7.2,<0.8.0"
typeguard = ">=2.7.1,<3.0.0"
typing-extensions = ">=3.7.4,<4.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
